--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LogIn"
+            android:label="Log In"/>
+        <activity android:name=".MainScreen"
+            android:label="main"/>
     </application>
 
 </manifest>
