--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.team38">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,6 +30,10 @@
         <activity
             android:name=".ShelterDetailView"
             android:label="@string/title_activity_shelter_detail_view"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ShelterSearch"
+            android:label="@string/title_activity_shelter_search"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
