--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.8.0'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     implementation files('libs/firebase-client-android-2.5.2.jar')
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.google.android.gms:play-services:11.8.0'
 }
 //test comment to force rebuild
 apply plugin: 'com.google.gms.google-services'
