--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-core:11.8.0'
     implementation files('libs/firebase-client-android-2.5.2.jar')
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.google.android.gms:play-services:11.8.0'
 }
 //test comment to force rebuild
 apply plugin: 'com.google.gms.google-services'
