--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MapsActivity"
-            android:label="Map"/>
+            android:label="Map" />
+        <activity
+            android:name=".UserView"
+            android:label="UserView" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value= "@string/google_maps_key"/>
