--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation files('libs/firebase-client-android-2.5.2.jar')
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.google.android.gms:play-services:12.0.1'
+    implementation files('libs/hamcrest-core-1.3.jar')
 }
 //test comment to force rebuild
 apply plugin: 'com.google.gms.google-services'
