--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     defaultConfig {
         applicationId "com.example.team38"
         minSdkVersion 19
+        //noinspection OldTargetApi
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -21,13 +22,21 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.firebase:firebase-database:15.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-core:15.0.0'
+    compile 'com.google.android.gms:play-services-location:15.0.0'
+    compile 'com.google.android.gms:play-services-maps:15.0.0'
     implementation files('libs/firebase-client-android-2.5.2.jar')
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    implementation files('libs/hamcrest-core-1.3.jar')
+    implementation files('libs/hamcrest-junit-2.0.0.0.jar')
 }
 //test comment to force rebuild
 apply plugin: 'com.google.gms.google-services'
