Refactor a lot of code to allow for email field, remove dead code, etc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
             android:value="@integer/google_play_services_version" />
 
 
+        <service android:name=".mail.SendMailIntentService" />
     </application>
 
 </manifest>
