--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     implementation files('libs/hamcrest-junit-2.0.0.0.jar')
     implementation files('libs/hamcrest-core-1.3.jar')
+    implementation files('libs/mail.jar')
+    implementation files('libs/additional.jar')
 }
 //test comment to force rebuild
 apply plugin: 'com.google.gms.google-services'
